docs/4.1/FAQ.md
# Frequently Asked Questions

&nbsp;

**What platforms does PictureFrame support?**

PictureFrame supports Windows, MacOS, Linux, Nintendo Switch, Sony PlayStation 4/5, Xbox Series X/S, iOS, tvOS, and Android. PictureFrame does not support HTML5, Opera GX, or Reddit. You might run into edge cases on platforms that I don't regularly test; please [report any bugs](https://github.com/JujuAdams/PictureFrame/issues) if and when you find them.

?> When running on Android you must set the “Display Layout” option set to `LAYOUT_IN_DISPLAY_CUTOUT_MODE_ALWAYS` in your project’s Game Options.

&nbsp;

**What versions of GameMaker does PictureFrame support?**

PictureFrame supports GameMaker 2024.14, and in theory supports every version of GameMaker later than that.

&nbsp;

**Are there any platform-specific SDK versions I have to use?**

PictureFrame requires that you use Android SDK 34 (or later) and iOS 11 (or later) for your games. Other platforms have no limitations other than what GameMaker itself enforces.

&nbsp;

**Is PictureFrame compatible with post-processing effects and shaders?**

Yes. The standard way to use post-processing effects in GameMaker is to set a shader and draw the application surface manually. If you have used [`PfApply()`](PfApply) (which is the typical use case) then it is required that you call [`PfPostDrawAppSurface()`](PfPostDrawAppSurface) in a Post-Draw event. All this function really does is draw a surface. To use post-processing effects you should set a shader before calling `PfPostDrawAppSurface()` and the shader will be applied to the drawn surface.

If you haven't used `PfApply()` then post-processing effects will work as normal.

&nbsp;

**What algorithm does PictureFrame use?**

The code that PictureFrame uses to calculate various properties of the render pipeline can be found in [`PfCalculate()`](https://github.com/JujuAdams/PictureFrame/blob/main/scripts/PfCalculate/PfCalculate.gml). This script has detailed comments which explain how values are computed.

&nbsp;

**How is PictureFrame licensed? Can I use it for commercial projects?**

[PictureFrame is released under the MIT license](https://github.com/JujuAdams/PictureFrame/blob/master/LICENSE). This means you can use it for whatever purpose you want, including commercial projects. It'd mean a lot to me if you'd drop my name in the credits (Juju Adams) and/or say thanks, but you're under no obligation to do so.

&nbsp;

**How do I update PictureFrame?**

Releases go out once in while, typically expedited if there is a serious bug. This library uses [semantic versioning](https://semver.org/). In short, if the left-most number in the version is increased then this is a "major version increase". Major version increases introduce breaking changes and you'll almost certainly have to rewrite some code. However, if the middle or right-most number in the version is increased then you probably won't have to rewrite any code. For example, moving from `1.1.0` to `2.0.0` is a major version increase but moving from `1.1.0` to `1.2.0` isn't.

?> Please always read patch notes. Very occasionally a minor breaking change in an obscure feature may be introduced by a minor version increase.

At any rate, the process to update is as follows:

1. **Back up your whole project using source control!**
2. Back up the contents of your configuration script (`__PfConfigMacros`) within your project. Duplicating scripts is sufficient
3. Delete all library scripts from your project. Unless you've moved things around, this means deleting the library folder from the asset browser
4. Import the latest [.yymps](https://github.com/JujuAdams/PictureFrame/releases/)
5. Restore your configuration scripts from the back-up line by line

!> Because configuration macros might be added or removed between versions, it's important to restore your configuration scripts carefully.

&nbsp;

**I think you're missing a useful feature and I'd like you to implement it!**

Great! Please make a [feature request](https://github.com/JujuAdams/PictureFrame/issues). Feature requests make PictureFrame a more fun tool to use and gives me something to think about when I'm bored on public transport.

&nbsp;

**I found a bug, and it both scares and mildly annoys me. What is the best way to get the problem solved?**

Please make a [bug report](https://github.com/JujuAdams/PictureFrame/issues). I check GitHub every day and bug fixes usually go out a couple days after that.

&nbsp;

**Who made PictureFrame?**

PictureFrame is built and maintained by [Juju](https://www.jujuadams.com/) who has been writing and rewriting camera systems for a long time. I've worked on a lot of [commercial GameMaker games](http://www.jujuadams.com/) over the years. PictureFrame is the product of practical experience working as a consultant.

&nbsp;

**Can I send you donations? Are you going to start a Patreon?**

Thank you for wanting to show your appreciation - it really does mean a lot to me personally - but I'm fortunate enough to have a stable income from gamedev. I'm not looking to join Patreon as a creator at this moment in time. If you'd like to support my work then drop a credit in your game and/or give a shout-out on the social media platform of your choice.
